--- a/settings.ini
+++ b/settings.ini
@@ -1,15 +1,15 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
-lib_name = nbdev_template
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+lib_name = testing43
+user = vitojph
+description = A description of your project
+keywords = some keywords
+author = Víctor Peinado
+author_email = vitojph@e.email
+copyright = Your Name or Company Name
 branch = master
 version = 0.0.1
-min_python = 3.6
+min_python = 3.7
 audience = Developers
 language = English
 # Set to True if you want to create a more fancy sidebar.json than the default
@@ -20,7 +20,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = 
+requirements = numpy
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 
